20000404-12:13 GMT+1 Victor Szakats <info@szelvesz.hu>

   * source/pp/ppcore.c
     % Some variables optimized out in pragma related code.
     % DebugPragma() simplified.

20000404-11:06 GMT+1 Victor Szakats <info@szelvesz.hu>

   * source/rtl/dircmd.prg
     + Changed to use NationMsg() instead of the hard-wired English
       string. The previous 100% compatible version left in STRICT_COMPAT 
       branch.

   * source/rtl/console.c
   * source/rtl/gtapi.c
   * source/rtl/gt*/gt*.c
     ! Fixed some TRACE calls.

   * source/rtl/wait.prg
   * source/rtl/input.prg
     % Small optimization.
     * Variable renamed to better reflect purpose and types.

   * source/rtl/tgetlist.prg
     ! Using NationMsg() instead of the hard-coded strings.

   * source/rdd/dbstrux.prg
     % Some optimizations.

   * tests/tstprag.prg
     + New tests changed.

20000404-08:55 GMT+2 Chen Kedem <niki@actcom.co.il>
   * doc/en/dbstrux.txt
     + documentation for __dbCreate()
     + documentation for CREATE
     + documentation for CREATE FROM
     * some re-formats
     ; By this all the functions in source/rdd/dbstrux.prg are documented

20000403-23:30 GMT-3 Luiz Rafael Culik <culik@sl.conex.net>
    *utils/hbdoc/genng.prg
     utils/hbdoc/genhtm.prg
        *Fixed handling for multi columns tables
    *utils/hbdoc/ft_funcs.prg
        +GetNumberofTableItems() added to count the number of item of a table

20000404-03:24 GMT+1 Victor Szakats <info@szelvesz.hu>

   * include/hbpp.h
     + Upped the buffer sizes.

   * source/pp/ppcore.c
   * tests/tstprag.prg
     * Some #pragma names modified to be Xbase++ compatible.
       AUTOMEMVARS  -> AUTOMEMVAR
       LINEINFO     -> LINENUMBER
       SHORTCUTTING -> SHORTCUT
       FORCEMEMVARS -> DYNAMICMEMVAR
     + Added the Xbase++ compatible pragma symtax: #pragma NAME( ON/OFF )
     + #pragma now allows space between long pragma name and parameter:
       #pragma Shortcut= ON or #pragma Shortcut( ON )